--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-
+import '@fontsource/satisfy';
 ---
 
 <html lang="en">
@@ -8,9 +8,66 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>Romántico</title>
 	</head>
-	<body>
-		<h1>Astro</h1>
+
+	<style>
+		section {
+			@apply mb-4
+		}
+
+		p {
+			@apply opacity-0
+		}
+	</style>
+	<body class="h-[400dvh] text-2xl bg-rose-400 text-white">
+		<div class="flex items-center min-h-dvh sticky top-0 justify-center p-8">
+			<main>
+				<h1 class="text-6xl mb-4 high">Arely <svg class="h-10 w-10 inline-block fill-current" version="1.0" xmlns="http://www.w3.org/2000/svg"
+  viewBox="0 0 1280.000000 1189.000000"
+ preserveAspectRatio="xMidYMid meet">
+<g transform="translate(0.000000,1189.000000) scale(0.100000,-0.100000)"
+ stroke="none">
+<path d="M3250 11884 c-25 -2 -106 -11 -180 -20 -1485 -172 -2704 -1295 -3001
+-2764 -133 -660 -67 -1507 171 -2223 252 -753 675 -1411 1397 -2172 342 -360
+634 -630 1588 -1470 231 -203 488 -430 570 -505 1024 -920 1735 -1692 2346
+-2547 l130 -183 132 0 132 1 130 192 c557 822 1212 1560 2185 2461 191 178
+408 373 1027 923 956 852 1445 1343 1841 1850 643 825 968 1603 1064 2553 19
+196 17 665 -5 835 -105 805 -441 1497 -998 2054 -557 557 -1250 894 -2054 998
+-193 24 -613 24 -810 0 -733 -93 -1379 -387 -1920 -874 -191 -172 -406 -417
+-535 -610 -30 -45 -57 -82 -60 -82 -3 0 -30 37 -60 82 -129 193 -344 438 -535
+610 -531 478 -1170 773 -1878 867 -146 20 -562 34 -677 24z"/>
+</g>
+</svg></h1>
+				<section>
+					<p>Sé que no soy el más romántico,</p>
+					<p>ni el más sociable, ni el más perfecto,</p>
+					<p>pero una certeza habita en mi corazón:</p>
+					<p>hasta el último de mis días, te amaré con devoción.</p>
+				</section>
+				<section>
+					<p>Eres la mujer por quien vale la pena luchar,</p>
+					<p>y aunque no lo pidas, lo sé sin dudar:</p>
+					<p>si cambiar algo en mí puede ayudarte a amar,</p>
+					<p>seré quien más se esfuerce, quien más se haga transformar.</p>
+				</section>
+				<section>
+					<p>Con amor eterno,</p>
+					<p>Tu enamorado,</p>
+				</section>
+				<section>
+					<p class="high">Roberto</p>
+				</section>
+			</main>
+		</div>
 	</body>
+	<script>
+		import { scroll,timeline,stagger } from "motion"
+
+		const sequence = timeline([
+			["p",{opacity:[0,1],y:[10,0]},{delay:stagger(.5)}],
+		])
+
+		scroll(sequence)
+	</script>
 </html>
